recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: identifier expected but '{' found.
def { current(step)
    ^